Fixed text area wrapping

--- a/src/main/webapp/scss/echoed.scss
+++ b/src/main/webapp/scss/echoed.scss
@@ -1788,5 +1788,6 @@ h3{
     textarea, .textareaClone{
         min-height: 5em;
         padding: 5px 6px;
+        width: 300px;
     }
 }
